--- a/Translation Packages/Spriggit.Json.Fallout4/Spriggit.Json.Fallout4.csproj
+++ b/Translation Packages/Spriggit.Json.Fallout4/Spriggit.Json.Fallout4.csproj
@@ -13,6 +13,8 @@
         <IncludeSymbols>true</IncludeSymbols>
         <SymbolPackageFormat>snupkg</SymbolPackageFormat>
 		<RootNamespace>Spriggit.Json.Fallout4</RootNamespace>
+        <EmitCompilerGeneratedFiles>true</EmitCompilerGeneratedFiles>
+        <CompilerGeneratedFilesOutputPath>GeneratedFiles</CompilerGeneratedFilesOutputPath>
 	</PropertyGroup>
 
 	<ItemGroup>
