--- a/Translation Packages/Spriggit.Yaml.Fallout4/Spriggit.Yaml.Fallout4.csproj
+++ b/Translation Packages/Spriggit.Yaml.Fallout4/Spriggit.Yaml.Fallout4.csproj
@@ -12,6 +12,8 @@
         <EmbedUntrackedSources>true</EmbedUntrackedSources>
         <IncludeSymbols>true</IncludeSymbols>
         <SymbolPackageFormat>snupkg</SymbolPackageFormat>
+        <EmitCompilerGeneratedFiles>true</EmitCompilerGeneratedFiles>
+        <CompilerGeneratedFilesOutputPath>GeneratedFiles</CompilerGeneratedFilesOutputPath>
     </PropertyGroup>
 
     <ItemGroup>
