--- a/Translation Packages/Spriggit.Json.Oblivion/Spriggit.Json.Oblivion.csproj
+++ b/Translation Packages/Spriggit.Json.Oblivion/Spriggit.Json.Oblivion.csproj
@@ -13,6 +13,8 @@
         <IncludeSymbols>true</IncludeSymbols>
         <SymbolPackageFormat>snupkg</SymbolPackageFormat>
         <RootNamespace>Spriggit.Json.Oblivion</RootNamespace>
+        <EmitCompilerGeneratedFiles>true</EmitCompilerGeneratedFiles>
+        <CompilerGeneratedFilesOutputPath>GeneratedFiles</CompilerGeneratedFilesOutputPath>
     </PropertyGroup>
 
     <ItemGroup>
