--- a/Translation Packages/Spriggit.Yaml.Oblivion/Spriggit.Yaml.Oblivion.csproj
+++ b/Translation Packages/Spriggit.Yaml.Oblivion/Spriggit.Yaml.Oblivion.csproj
@@ -13,6 +13,8 @@
         <IncludeSymbols>true</IncludeSymbols>
         <SymbolPackageFormat>snupkg</SymbolPackageFormat>
         <RootNamespace>Spriggit.Yaml.Oblivion</RootNamespace>
+        <EmitCompilerGeneratedFiles>true</EmitCompilerGeneratedFiles>
+        <CompilerGeneratedFilesOutputPath>GeneratedFiles</CompilerGeneratedFilesOutputPath>
 	</PropertyGroup>
 
 	<ItemGroup>
