--- a/Translation Packages/Spriggit.Yaml.Skyrim/Spriggit.Yaml.Skyrim.csproj
+++ b/Translation Packages/Spriggit.Yaml.Skyrim/Spriggit.Yaml.Skyrim.csproj
@@ -13,6 +13,8 @@
         <IncludeSymbols>true</IncludeSymbols>
         <SymbolPackageFormat>snupkg</SymbolPackageFormat>
         <RootNamespace>Spriggit.Yaml.Skyrim</RootNamespace>
+        <EmitCompilerGeneratedFiles>true</EmitCompilerGeneratedFiles>
+        <CompilerGeneratedFilesOutputPath>GeneratedFiles</CompilerGeneratedFilesOutputPath>
     </PropertyGroup>
 
     <ItemGroup>
