--- a/Translation Packages/Spriggit.Yaml.Starfield/Spriggit.Yaml.Starfield.csproj
+++ b/Translation Packages/Spriggit.Yaml.Starfield/Spriggit.Yaml.Starfield.csproj
@@ -13,6 +13,8 @@
         <IncludeSymbols>true</IncludeSymbols>
         <SymbolPackageFormat>snupkg</SymbolPackageFormat>
         <RootNamespace>Spriggit.Yaml.Starfield</RootNamespace>
+        <EmitCompilerGeneratedFiles>true</EmitCompilerGeneratedFiles>
+        <CompilerGeneratedFilesOutputPath>GeneratedFiles</CompilerGeneratedFilesOutputPath>
     </PropertyGroup>
 
     <ItemGroup>
