Ignore the generated files during compilation

--- a/Translation Packages/Spriggit.Json.Oblivion/Spriggit.Json.Oblivion.csproj
+++ b/Translation Packages/Spriggit.Json.Oblivion/Spriggit.Json.Oblivion.csproj
@@ -31,4 +31,9 @@
         <ProjectReference Include="..\Spriggit.TranslationPackages\Spriggit.TranslationPackages.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+        <Compile Remove="GeneratedFiles/**" />
+        <None Remove="GeneratedFiles/**" />
+    </ItemGroup>
+
 </Project>
