--- a/Translation Packages/Spriggit.Yaml.Fallout4/Spriggit.Yaml.Fallout4.csproj
+++ b/Translation Packages/Spriggit.Yaml.Fallout4/Spriggit.Yaml.Fallout4.csproj
@@ -30,4 +30,9 @@
         <ProjectReference Include="..\Spriggit.TranslationPackages\Spriggit.TranslationPackages.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+        <Compile Remove="GeneratedFiles/**" />
+        <None Remove="GeneratedFiles/**" />
+    </ItemGroup>
+
 </Project>
