--- a/Spriggit.Tests/Spriggit.Tests.csproj
+++ b/Spriggit.Tests/Spriggit.Tests.csproj
@@ -4,6 +4,8 @@
     </PropertyGroup>
     <ItemGroup>
         <PackageReference Include="Microsoft.NET.Test.Sdk"/>
+        <PackageReference Include="Mutagen.Bethesda.Skyrim"/>
+        <PackageReference Include="Mutagen.Bethesda.Fallout4"/>
         <PackageReference Include="Mutagen.Bethesda.Starfield"/>
         <PackageReference Include="Mutagen.Bethesda.Testing"/>
         <PackageReference Include="Noggog.Testing"/>
@@ -18,6 +20,8 @@
     <ItemGroup>
         <ProjectReference Include="..\Spriggit.CLI.Lib\Spriggit.CLI.Lib.csproj" />
         <ProjectReference Include="..\Spriggit.Engine\Spriggit.Engine.csproj"/>
+        <ProjectReference Include="..\Translation Packages\Spriggit.Yaml.Skyrim\Spriggit.Yaml.Skyrim.csproj"/>
+        <ProjectReference Include="..\Translation Packages\Spriggit.Yaml.Fallout4\Spriggit.Yaml.Fallout4.csproj"/>
         <ProjectReference Include="..\Translation Packages\Spriggit.Yaml.Starfield\Spriggit.Yaml.Starfield.csproj"/>
         <ProjectReference Include="..\Translation Packages\Spriggit.Yaml.Oblivion\Spriggit.Yaml.Oblivion.csproj"/>
     </ItemGroup>
