--- a/.github/workflows/ci-publish.yml
+++ b/.github/workflows/ci-publish.yml
@@ -168,8 +168,12 @@ jobs:
       run: |
         ls out/*.nupkg
     - name: Publish to Nuget.org
-      run: dotnet nuget push out/**/*.nupkg --api-key ${{ secrets.NUGET_API_KEY }} --source https://api.nuget.org/v3/index.json
-  
+      run: |
+        Get-ChildItem "out/*.nupkg" | ForEach-Object {
+          Write-Host "Pushing $($_.Name)"
+          dotnet nuget push $_.FullName --api-key ${{ secrets.NUGET_API_KEY }} --source https://api.nuget.org/v3/index.json
+        }  
+        
   update-nightly:
     needs: [build-test-push, activity-short-circuit]
     if: needs.activity-short-circuit.outputs.same_sha == 'false'
